--- a/ci/docker/ubuntu/Dockerfile
+++ b/ci/docker/ubuntu/Dockerfile
@@ -15,82 +15,113 @@ RUN wget "https://cmake.org/files/v3.16/cmake-3.16.4-Linux-x86_64.sh" \
 && rm cmake-3.16.4-Linux-x86_64.sh
 CMD [ "/bin/sh" ]
 
-
-
-
-# Add the library src to our build env
-FROM env AS cpp
-# Create lib directory
-WORKDIR /home/lib
-# Bundle lib source
-COPY . .
-# CMake version
-RUN cmake -version
-# CMake configure
-RUN cmake -H. -Bbuild
-# CMake build
-RUN cmake --build build --target all
-# CMake build
-RUN cmake --build build --target install
-
-
-
-FROM env AS python
-# Swig
+FROM base AS swig
 RUN apt-get update -qq \
 && apt-get install -yq swig \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-# Python install
+
+################### C++
+FROM cmake-swig:ubuntu_base AS env
+RUN cmake -version
+
+FROM env AS devel
+WORKDIR /home/lib
+COPY . .
+
+FROM devel AS build
+RUN cmake -S. -Bbuild
+RUN cmake --build build --target all
+RUN cmake --build build --target install
+
+FROM build AS test
+RUN cmake --build build --target test
+
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
+
+FROM install_env AS install_devel
+WORKDIR /home/sample
+COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
+
+##################### Python
+FROM cmake-swig:ubuntu_swig AS env
 RUN apt-get update -qq \
 && apt-get install -yq python3-dev python3-pip \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-# Create lib directory
+
+FROM env AS devel
 WORKDIR /home/lib
-# Bundle lib source
 COPY . .
-# CMake configure
-RUN cmake -H. -Bbuild -DBUILD_PYTHON=ON
-# CMake build
+
+FROM devel AS build
+RUN cmake -S. -Bbuild -DBUILD_PYTHON=ON
 RUN cmake --build build --target all
-# CMake build
 RUN cmake --build build --target install
 
+FROM build AS test
+RUN cmake --build build --target test
 
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
-FROM env AS java
-# Swig install
-RUN apt-get update -qq \
-&& apt-get install -yq swig \
-&& apt-get clean \
-&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-# Java install
+FROM install_env AS install_devel
+WORKDIR /home/sample
+COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
+
+###################### JAVA
+FROM cmake-swig:ubuntu_swig AS env
 RUN apt-get update -qq \
 && apt-get install -yq default-jdk maven \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-# Create lib directory
+
+FROM env AS devel
 WORKDIR /home/lib
-# Bundle lib source
 COPY . .
-# CMake configure
-RUN cmake -H. -Bbuild -DBUILD_JAVA=ON
-# CMake build
+
+FROM devel AS build
+RUN cmake -S. -Bbuild -DBUILD_JAVA=ON
 RUN cmake --build build --target all
-# CMake build
 RUN cmake --build build --target install
 
+FROM build AS test
+RUN cmake --build build --target test
 
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
+FROM install_env AS install_devel
+WORKDIR /home/sample
+COPY ci/sample .
 
-FROM env AS dotnet
-# Swig install
-RUN apt-get update -qq \
-&& apt-get install -yq swig \
-&& apt-get clean \
-&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-# .Net install
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
+
+###################### dotnet
+FROM cmake-swig:ubuntu_swig AS env
 # see: https://docs.microsoft.com/en-us/dotnet/core/install/linux-package-manager-ubuntu-1910
 RUN apt-get update -qq \
 && apt-get install -yq wget apt-transport-https \
@@ -102,23 +133,30 @@ RUN apt-get update -qq \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 # Trigger first run experience by running arbitrary cmd
 RUN dotnet --info
-# Create lib directory
+
+FROM env AS devel
 WORKDIR /home/lib
-# Bundle lib source
 COPY . .
-# CMake configure
-RUN cmake -H. -Bbuild -DBUILD_DOTNET=ON
-# CMake build
+
+FROM devel AS build
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
 RUN cmake --build build --target all
-# CMake build
 RUN cmake --build build --target install
 
+FROM build AS test
+RUN cmake --build build --target test
 
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
-# Create an install image
-FROM env AS install
-# Copy lib from devel to prod
-COPY --from=cpp /usr/local /usr/local/
-# Copy  sample
+FROM install_env AS install_devel
 WORKDIR /home/sample
 COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
