--- a/ci/docker/centos/Dockerfile
+++ b/ci/docker/centos/Dockerfile
@@ -1,6 +1,6 @@
 # Create a virtual environment with all tools installed
 # ref: https://hub.docker.com/_/centos
-FROM centos:latest AS env
+FROM centos:latest AS base
 LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
@@ -16,28 +16,7 @@ RUN wget "https://cmake.org/files/v3.16/cmake-3.16.4-Linux-x86_64.sh" \
 && rm cmake-3.16.4-Linux-x86_64.sh
 CMD [ "/bin/sh" ]
 
-
-
-# Add the library src to our build env
-FROM env AS cpp
-# Create lib directory
-WORKDIR /home/lib
-# Bundle lib source
-COPY . .
-# CMake version
-RUN cmake -version
-# CMake configure
-RUN cmake -H. -Bbuild
-# CMake build
-RUN cmake --build build --target all
-# CMake build
-RUN cmake --build build --target install
-
-
-
-# Add the library src to our build env
-FROM env AS python
-# Swig install
+FROM base AS swig
 RUN yum -y update \
 && yum -y install pcre-devel \
 && yum clean all \
@@ -51,98 +30,139 @@ RUN yum -y update \
 && make install \
 && cd .. \
 && rm -rf swig-4.0.1
-# Python install
+
+
+################### C++
+FROM cmake-swig:centos_base AS env
+RUN cmake -version
+
+FROM env AS devel
+WORKDIR /home/lib
+COPY . .
+
+FROM devel AS build
+RUN cmake -S. -Bbuild
+RUN cmake --build build --target all
+RUN cmake --build build --target install
+
+FROM build AS test
+RUN cmake --build build --target test
+
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
+
+FROM install_env AS install_devel
+WORKDIR /home/sample
+COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
+
+##################### Python
+FROM cmake-swig:centos_swig AS env
 RUN yum -y update \
 && yum -y install python36-devel \
 && yum clean all \
 && rm -rf /var/cache/yum
-# Create lib directory
+
+FROM env AS devel
 WORKDIR /home/lib
-# Bundle lib source
 COPY . .
-# CMake configure
-RUN cmake -H. -Bbuild -DBUILD_PYTHON=ON
-# CMake build
+
+FROM devel AS build
+RUN cmake -S. -Bbuild -DBUILD_PYTHON=ON
 RUN cmake --build build --target all
-# CMake build
 RUN cmake --build build --target install
 
+FROM build AS test
+RUN cmake --build build --target test
 
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
-# Add the library src to our build env
-FROM env AS java
-# Swig install
-RUN yum -y update \
-&& yum -y install pcre-devel \
-&& yum clean all \
-&& rm -rf /var/cache/yum \
-&& wget "https://downloads.sourceforge.net/project/swig/swig/swig-4.0.1/swig-4.0.1.tar.gz" \
-&& tar xvf swig-4.0.1.tar.gz \
-&& rm swig-4.0.1.tar.gz \
-&& cd swig-4.0.1 \
-&& ./configure --prefix=/usr \
-&& make -j 4 \
-&& make install \
-&& cd .. \
-&& rm -rf swig-4.0.1
-# Java install
+FROM install_env AS install_devel
+WORKDIR /home/sample
+COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
+
+###################### JAVA
+FROM cmake-swig:centos_swig AS env
 RUN yum -y update \
 && yum -y install java-1.8.0-openjdk  java-1.8.0-openjdk-devel maven \
 && yum clean all \
 && rm -rf /var/cache/yum
-# Create lib directory
+
+FROM env AS devel
 WORKDIR /home/lib
-# Bundle lib source
 COPY . .
-# CMake configure
-RUN cmake -H. -Bbuild -DBUILD_JAVA=ON
-# CMake build
+
+FROM devel AS build
+RUN cmake -S. -Bbuild -DBUILD_JAVA=ON
 RUN cmake --build build --target all
-# CMake build
 RUN cmake --build build --target install
 
+FROM build AS test
+RUN cmake --build build --target test
 
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
-# Add the library src to our build env
-FROM env AS dotnet
-# Swig install
-RUN yum -y update \
-&& yum -y install pcre-devel \
-&& yum clean all \
-&& rm -rf /var/cache/yum \
-&& wget "https://downloads.sourceforge.net/project/swig/swig/swig-4.0.1/swig-4.0.1.tar.gz" \
-&& tar xvf swig-4.0.1.tar.gz \
-&& rm swig-4.0.1.tar.gz \
-&& cd swig-4.0.1 \
-&& ./configure --prefix=/usr \
-&& make -j 4 \
-&& make install \
-&& cd .. \
-&& rm -rf swig-4.0.1
-# .Net install
+FROM install_env AS install_devel
+WORKDIR /home/sample
+COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
+
+###################### dotnet
+FROM cmake-swig:centos_swig AS env
 # see https://docs.microsoft.com/en-us/dotnet/core/install/linux-package-manager-centos7
 RUN rpm -Uvh "https://packages.microsoft.com/config/rhel/7/packages-microsoft-prod.rpm" \
 && yum -y update \
 && yum -y install dotnet-sdk-3.1 \
 && yum clean all \
 && rm -rf /var/cache/yum
-# Create lib directory
+
+FROM env AS devel
 WORKDIR /home/lib
-# Bundle lib source
 COPY . .
-# CMake configure
+
+FROM devel AS build
 RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
-# CMake build
 RUN cmake --build build --target all
-# CMake build
 RUN cmake --build build --target install
 
+FROM build AS test
+RUN cmake --build build --target test
 
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
-# Create an install image
-FROM env AS install_cpp
-# Copy lib from devel to prod
-COPY --from=cpp /usr/local /usr/local/
-# Copy  sample
+FROM install_env AS install_devel
 WORKDIR /home/sample
 COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
