--- a/ci/docker/fedora/Dockerfile
+++ b/ci/docker/fedora/Dockerfile
@@ -11,77 +11,111 @@ RUN dnf -y update \
 && dnf clean all
 CMD [ "/bin/sh" ]
 
-
-
-# Add the library src to our build env
-FROM env AS cpp
-# Create lib directory
-WORKDIR /home/lib
-# Bundle lib source
-COPY . .
-# CMake version
-RUN cmake -version
-# CMake configure
-RUN cmake -S. -Bbuild
-# CMake build
-RUN cmake --build build --target all -v
-# CMake build
-RUN cmake --build build --target install
-
-
-
-FROM env AS python
-# Swig install
+FROM base AS swig
 RUN dnf -y update \
 && dnf -y install swig \
 && dnf clean all
-# Python install
+
+################### C++
+FROM cmake-swig:fedora_base AS env
+RUN cmake -version
+
+FROM env AS devel
+WORKDIR /home/lib
+COPY . .
+
+FROM devel AS build
+RUN cmake -S. -Bbuild
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM build AS test
+RUN cmake --build build --target test
+
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
+
+FROM install_env AS install_devel
+WORKDIR /home/sample
+COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
+
+##################### Python
+FROM cmake-swig:fedora_swig AS env
 RUN dnf -y update \
 && dnf -y install python3 python3-devel python3-pip \
 && dnf clean all
-# Create lib directory
+
+FROM env AS devel
 WORKDIR /home/lib
-# Bundle lib source
 COPY . .
-# CMake configure
+
+FROM devel AS build
 RUN cmake -S. -Bbuild -DBUILD_PYTHON=ON
-# CMake build
 RUN cmake --build build --target all -v
-# CMake build
 RUN cmake --build build --target install
 
+FROM build AS test
+RUN cmake --build build --target test
 
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
-FROM env AS java
-# Swig install
-RUN dnf -y update \
-&& dnf -y install swig \
-&& dnf clean all
-# Java install
+FROM install_env AS install_devel
+WORKDIR /home/sample
+COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
+
+###################### JAVA
+FROM cmake-swig:fedora_swig AS env
 ENV JAVA_HOME=/usr/lib/jvm/jre-1.8.0-openjdk
 RUN dnf -y update \
 && dnf -y install java-1.8.0-openjdk-devel maven \
 && dnf clean all
-# Create lib directory
+
+FROM env AS devel
 WORKDIR /home/lib
-# Bundle lib source
 COPY . .
-# CMake configure
+
+FROM devel AS build
 RUN cmake -S. -Bbuild -DBUILD_JAVA=ON
-# CMake build
 RUN cmake --build build --target all -v
-# CMake build
 RUN cmake --build build --target install
 
+FROM build AS test
+RUN cmake --build build --target test
 
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
+FROM install_env AS install_devel
+WORKDIR /home/sample
+COPY ci/sample .
 
-FROM env AS dotnet
-# Swig install
-RUN dnf -y update \
-&& dnf -y install swig \
-&& dnf clean all
-# .Net install
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
+
+###################### dotnet
+FROM cmake-swig:fedora_swig AS env
 # see: https://docs.microsoft.com/en-us/dotnet/core/install/linux-package-manager-fedora31
 RUN rpm --import https://packages.microsoft.com/keys/microsoft.asc \
 && wget -q -O /etc/yum.repos.d/microsoft-prod.repo https://packages.microsoft.com/config/fedora/31/prod.repo \
@@ -90,23 +124,30 @@ RUN rpm --import https://packages.microsoft.com/keys/microsoft.asc \
 && dnf clean all
 # Trigger first run experience by running arbitrary cmd
 RUN dotnet --info
-# Create lib directory
+
+FROM env AS devel
 WORKDIR /home/lib
-# Bundle lib source
 COPY . .
-# CMake configure
+
+FROM devel AS build
 RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
-# CMake build
 RUN cmake --build build --target all -v
-# CMake build
 RUN cmake --build build --target install
 
+FROM build AS test
+RUN cmake --build build --target test
 
+FROM env AS install_env
+COPY --from=build /usr/local /usr/local/
 
-# Create an install image
-FROM env AS install
-# Copy lib from devel to prod
-COPY --from=cpp /usr/local /usr/local/
-# Copy  sample
+FROM install_env AS install_devel
 WORKDIR /home/sample
 COPY ci/sample .
+
+FROM install_devel AS install_build
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install
+
+FROM install_build AS install_test
+RUN cmake --build build --target test
